--- a/index.html
+++ b/index.html
@@ -255,6 +255,9 @@
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
+                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw XXX"></i></a>
+                            </li>
+                            <li>
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <!-- <li>
@@ -285,7 +288,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
+                        Copyright &copy; John McCann 2017. All rights reserved
                     </div>
                 </div>
             </div>
