change profile picture to smiley face :) modify color scheme.

--- a/index.html
+++ b/index.html
@@ -72,11 +72,14 @@
     </nav>
 
     <!-- Header -->
-    <header>
+    <header class="orange-red">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <!-- <img class="img-responsive" src="img/profile.png" alt=""> -->
+                    <!-- <img class="img-responsive" id="profile-img" src="img/smiley.svg" alt=""> -->
+                    <object data="img/smiley.svg" type="image/svg+xml" class="img-responsive">
+                    </object>
                     <div class="intro-text">
                         <span class="name">John McCann</span>
                         <hr class="star-light">
@@ -88,12 +91,12 @@
     </header>
 
     <!-- About Section -->
-    <section class="success maroon-background" id="about">
+    <section class="success navy" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
-                    <hr class="star-light maroon-background">
+                    <hr class="star-light">
                 </div>
             </div>
             <!-- <div class="row">
