change look for project pictures

--- a/index.html
+++ b/index.html
@@ -156,9 +156,13 @@
             <div class="row">
                 <div class="col-sm-6 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
+                        <div class="portfolio-overlay orange-red">
+                            <img src="img/portfolio/storyphotos.jpeg" alt="" class="portfolio-image">
+                        </div>
+                        <div class="caption orange-red">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
+                                <span>Story Photos</span>
+                                <!-- <i class="fa fa-search-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/cabin.png" class="img-responsive" alt="">
@@ -166,9 +170,18 @@
                 </div>
                 <div class="col-sm-6 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
+                        <!-- <div class="caption"> -->
+                            <!-- <div class="caption-content"> -->
+                                <!-- <i class="fa fa-search-plus fa-3x"></i> -->
+                            <!-- </div> -->
+                        <!-- </div> -->
+                        <div class="portfolio-overlay navy">
+                            <!-- <img src="img/portfolio/storyphotos.jpeg" alt="" class="portfolio-image"> -->
+                        </div>
+                        <div class="caption navy">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
+                                <span>Notify Frontend</span>
+                                <!-- <i class="fa fa-search-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/cake.png" class="img-responsive" alt="">
@@ -176,9 +189,18 @@
                 </div>
                 <div class="col-sm-6 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
+                        <!-- <div class="caption"> -->
+                            <!-- <div class="caption-content"> -->
+                                <!-- <i class="fa fa-search-plus fa-3x"></i> -->
+                            <!-- </div> -->
+                        <!-- </div> -->
+                        <div class="portfolio-overlay navy">
+                            <!-- <img src="img/portfolio/storyphotos.jpeg" alt="" class="portfolio-image"> -->
+                        </div>
+                        <div class="caption navy">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
+                                <span>Segfault OS</span>
+                                <!-- <i class="fa fa-search-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/circus.png" class="img-responsive" alt="">
@@ -186,9 +208,18 @@
                 </div>
                 <div class="col-sm-6 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
+                        <!-- <div class="caption"> -->
+                            <!-- <div class="caption-content"> -->
+                                <!-- <i class="fa fa-search-plus fa-3x"></i> -->
+                            <!-- </div> -->
+                        <!-- </div> -->
+                        <div class="portfolio-overlay orange-red">
+                            <!-- <img src="img/portfolio/storyphotos.jpeg" alt="" class="portfolio-image"> -->
+                        </div>
+                        <div class="caption orange-red">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
+                                <span>Errata Ad Infinitum</span>
+                                <!-- <i class="fa fa-search-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/game.png" class="img-responsive" alt="">
@@ -350,7 +381,14 @@
                         <div class="modal-body">
                             <h2><a href="http://www.storyphotos.net">Story Photos</a></h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
+
+                            <a href="http://www.storyphotos.net" class="project-link">
+                                <div class="portfolio-overlay">
+                                    <img src="img/portfolio/storyphotos.jpeg" alt="" class="portfolio-image">
+                                    <!-- <div class="portfolio-image"></div> -->
+                                </div>
+                                <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
+                            </a>
                             <p>
                                 I recently returned home after a 20 month long
                                 trip abroad, and I wanted to reflect on the
@@ -361,7 +399,7 @@
                                 wrote the html and css from scratch. I wrote
                                 the backend in django and deployed on Heroku's
                                 cloud platform.  I used jQuery 
-                                <a href="">Scrollify</a> for the automated
+                                <a href="">fullPage.js</a> for the automated
                                 scrolling, and the black and white
                                     illustrations are modifications I made to
                                     graphics from <a href="">openclipart</a>.
