change format of pictures in portfolioModal

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                             <hr class="star-primary">
 
                             <a href="http://www.storyphotos.net" class="project-link">
-                                <div class="portfolio-overlay">
+                                <div class="portfolio-overlay orange-red">
                                     <img src="img/portfolio/storyphotos.jpeg" alt="" class="portfolio-image">
                                     <!-- <div class="portfolio-image"></div> -->
                                 </div>
@@ -442,7 +442,14 @@
                         <div class="modal-body">
                             <h2>Notify Frontend Implementation</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
+                            <!-- <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt=""> -->
+                            <a href="http://www.storyphotos.net" class="project-link">
+                                <div class="portfolio-overlay navy">
+                                    <img src="img/portfolio/cake.png" alt="" class="portfolio-image">
+                                </div>
+                                <!-- change to blank image -->
+                                <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
+                            </a>
                             <p>Description and link coming soon</p>
                             <!-- <ul class="list-inline item-details">
                                 <li>Client:
@@ -479,7 +486,14 @@
                         <div class="modal-body">
                             <h2>Segfault OS</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
+                            <!-- <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt=""> -->
+                            <a href="http://www.storyphotos.net" class="project-link">
+                                <div class="portfolio-overlay navy">
+                                    <img src="img/portfolio/circus.png" alt="" class="portfolio-image">
+                                </div>
+                                <!-- XXX change to blank image -->
+                                <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
+                            </a>
                             <p>Description and link coming soon</p>
                             <!-- <ul class="list-inline item-details">
                                 <li>Client:
@@ -516,7 +530,13 @@
                         <div class="modal-body">
                             <h2>Errata Ad Infinitum</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">
+                            <!-- <img src="img/portfolio/game.png" class="img-responsive img-centered" alt=""> -->
+                            <a href="http://www.storyphotos.net" class="project-link">
+                                <div class="portfolio-overlay orange-red">
+                                    <img src="img/portfolio/cabin.png" alt="" class="portfolio-image">
+                                </div>
+                                <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
+                            </a>
                             <p>Description and link coming soon</p>
                             <!-- <ul class="list-inline item-details">
                                 <li>Client:
