--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6 portfolio-item">
+                <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-overlay orange-red">
+                        <div class="portfolio-overlay navy">
                             <img src="img/portfolio/storyphotos.jpeg" alt="" class="portfolio-image">
                         </div>
-                        <div class="caption orange-red">
+                        <div class="caption navy">
                             <div class="caption-content">
                                 <span>Story Photos</span>
                                 <!-- <i class="fa fa-search-plus fa-3x"></i> -->
@@ -168,17 +168,17 @@
                         <img src="img/portfolio/cabin.png" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-6 portfolio-item">
+                <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <!-- <div class="caption"> -->
                             <!-- <div class="caption-content"> -->
                                 <!-- <i class="fa fa-search-plus fa-3x"></i> -->
                             <!-- </div> -->
                         <!-- </div> -->
-                        <div class="portfolio-overlay navy">
-                            <!-- <img src="img/portfolio/storyphotos.jpeg" alt="" class="portfolio-image"> -->
+                        <div class="portfolio-overlay orange-red">
+                            <img src="img/portfolio/notify_square.jpeg" alt="" class="portfolio-image">
                         </div>
-                        <div class="caption navy">
+                        <div class="caption orange-red">
                             <div class="caption-content">
                                 <span>Notify Frontend</span>
                                 <!-- <i class="fa fa-search-plus fa-3x"></i> -->
@@ -187,7 +187,7 @@
                         <img src="img/portfolio/cake.png" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-6 portfolio-item">
+                <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <!-- <div class="caption"> -->
                             <!-- <div class="caption-content"> -->
@@ -206,25 +206,25 @@
                         <img src="img/portfolio/circus.png" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-6 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                        <!-- <div class="caption"> -->
+                <!-- <div class="col-sm-6 portfolio-item"> -->
+                    <!-- <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal"> -->
+                        <!-- [> <div class="caption"> <] -->
+                            <!-- [> <div class="caption-content"> <] -->
+                                <!-- [> <i class="fa fa-search-plus fa-3x"></i> <] -->
+                            <!-- [> </div> <] -->
+                        <!-- [> </div> <] -->
+                        <!-- <div class="portfolio-overlay orange-red"> -->
+                            <!-- [> <img src="img/portfolio/storyphotos.jpeg" alt="" class="portfolio-image"> <] -->
+                        <!-- </div> -->
+                        <!-- <div class="caption orange-red"> -->
                             <!-- <div class="caption-content"> -->
-                                <!-- <i class="fa fa-search-plus fa-3x"></i> -->
+                                <!-- <span>Errata Ad Infinitum</span> -->
+                                <!-- [> <i class="fa fa-search-plus fa-3x"></i> <] -->
                             <!-- </div> -->
                         <!-- </div> -->
-                        <div class="portfolio-overlay orange-red">
-                            <!-- <img src="img/portfolio/storyphotos.jpeg" alt="" class="portfolio-image"> -->
-                        </div>
-                        <div class="caption orange-red">
-                            <div class="caption-content">
-                                <span>Errata Ad Infinitum</span>
-                                <!-- <i class="fa fa-search-plus fa-3x"></i> -->
-                            </div>
-                        </div>
-                        <img src="img/portfolio/game.png" class="img-responsive" alt="">
-                    </a>
-                </div>
+                        <!-- <img src="img/portfolio/game.png" class="img-responsive" alt=""> -->
+                    <!-- </a> -->
+                <!-- </div> -->
                 <!-- <div class="col-sm-3 portfolio-item">
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -250,12 +250,12 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact">
+    <section id="contact" class="navy white-font">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Contact Me</h2>
-                    <hr class="star-primary">
+                    <hr class="star-light">
                 </div>
             </div>
             <div class="row">
@@ -310,11 +310,6 @@
         <div class="footer-above">
             <div class="container">
                 <div class="row">
-                    <!-- <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
-                    </div> -->
                     <div class="footer-col col-md-12">
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
@@ -383,11 +378,12 @@
                             <hr class="star-primary">
 
                             <a href="http://www.storyphotos.net" class="project-link">
-                                <div class="portfolio-overlay orange-red">
-                                    <img src="img/portfolio/storyphotos.jpeg" alt="" class="portfolio-image">
-                                    <!-- <div class="portfolio-image"></div> -->
-                                </div>
-                                <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
+                                <!-- <div class="portfolio-overlay orange-red"> -->
+                                    <!-- <img src="img/portfolio/storyphotos.jpeg" alt="" class="portfolio-image"> -->
+                                    <!-- [> <div class="portfolio-image"></div> <] -->
+                                <!-- </div> -->
+                                <!-- <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt=""> -->
+                                <img src="img/portfolio/storyphotos.jpeg" class="img-responsive img-centered portfolio-media" alt="">
                             </a>
                             <p>
                                 I recently returned home after a 20 month long
@@ -440,15 +436,17 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Notify Frontend Implementation</h2>
+                            <h2><a href="./notify">Notify Frontend Implementation</a></h2>
                             <hr class="star-primary">
                             <!-- <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt=""> -->
                             <a href="http://www.storyphotos.net" class="project-link">
-                                <div class="portfolio-overlay navy">
-                                    <img src="img/portfolio/cake.png" alt="" class="portfolio-image">
-                                </div>
+                                <!-- <div class="portfolio-overlay navy"> -->
+                                    <!-- <img src="img/portfolio/cake.png" alt="" class="portfolio-image"> -->
+                                <!-- </div> -->
                                 <!-- change to blank image -->
-                                <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
+                                <!-- <img src="img/portfolio/cabin.png" class="img-responsive img-centered portfolio-media" alt=""> -->
+                                <img src="img/portfolio/notify.jpeg" class="img-responsive img-centered portfolio-media" alt="">
+                                
                             </a>
                             <p>Description and link coming soon</p>
                             <!-- <ul class="list-inline item-details">
@@ -487,13 +485,17 @@
                             <h2>Segfault OS</h2>
                             <hr class="star-primary">
                             <!-- <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt=""> -->
-                            <a href="http://www.storyphotos.net" class="project-link">
-                                <div class="portfolio-overlay navy">
-                                    <img src="img/portfolio/circus.png" alt="" class="portfolio-image">
-                                </div>
-                                <!-- XXX change to blank image -->
-                                <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            </a>
+                            
+                            <video  controls class="img-responsive img-centered portfolio-media">
+                                <source src="bear.mp4" type="video/mp4">
+                            </video>
+                            <!-- <a href="http://www.storyphotos.net" class="project-link"> -->
+                                <!-- [> <div class="portfolio-overlay navy"> <] -->
+                                    <!-- [> <img src="img/portfolio/circus.png" alt="" class="portfolio-image"> <] -->
+                                <!-- [> </div> <] -->
+                                <!-- [> XXX change to blank image <] -->
+                                <!-- <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt=""> -->
+                            <!-- </a> -->
                             <p>Description and link coming soon</p>
                             <!-- <ul class="list-inline item-details">
                                 <li>Client:
@@ -644,8 +646,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+    <!-- <script src="js/jqBootstrapValidation.js"></script> -->
+    <!-- <script src="js/contact_me.js"></script> -->
 
     <!-- Theme JavaScript -->
     <script src="js/freelancer.min.js"></script>
