Add suppport for video in Segfault OS project page.

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                             <h2><a href="./notify">Notify Frontend Implementation</a></h2>
                             <hr class="star-primary">
                             <!-- <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt=""> -->
-                            <a href="http://www.storyphotos.net" class="project-link">
+                            <a href="./notify" class="project-link">
                                 <!-- <div class="portfolio-overlay navy"> -->
                                     <!-- <img src="img/portfolio/cake.png" alt="" class="portfolio-image"> -->
                                 <!-- </div> -->
@@ -471,7 +471,7 @@
         </div>
     </div>
     <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
+        <div class="modal-content video-pauser" data-video-target="segfault-os">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
                     <div class="rl">
@@ -486,7 +486,8 @@
                             <hr class="star-primary">
                             <!-- <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt=""> -->
                             
-                            <video  controls class="img-responsive img-centered portfolio-media">
+                            <video  controls id="segfault-os"
+                            class="img-responsive img-centered portfolio-media">
                                 <source src="bear.mp4" type="video/mp4">
                             </video>
                             <!-- <a href="http://www.storyphotos.net" class="project-link"> -->
@@ -511,7 +512,10 @@
                                     </strong>
                                 </li>
                             </ul> -->
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            <button type="button" class="btn btn-default"
+                            data-dismiss="modal">
+                                <i class="fa fa-times"></i> Close
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -651,6 +655,7 @@
 
     <!-- Theme JavaScript -->
     <script src="js/freelancer.min.js"></script>
+    <script src="js/added.js"></script>
 
 </body>
 
