Reduce the padding above .modal-content elements to look better on mobile devies. Make the x on .modal-content elements smaller.

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-overlay navy">
+                        <div class="portfolio-overlay orange-red">
                             <img src="img/portfolio/storyphotos.jpeg" alt="" class="portfolio-image">
                         </div>
                         <div class="caption navy">
@@ -175,7 +175,7 @@
                                 <!-- <i class="fa fa-search-plus fa-3x"></i> -->
                             <!-- </div> -->
                         <!-- </div> -->
-                        <div class="portfolio-overlay orange-red">
+                        <div class="portfolio-overlay navy">
                             <img src="img/portfolio/notify_square.jpeg" alt="" class="portfolio-image">
                         </div>
                         <div class="caption orange-red">
@@ -194,7 +194,8 @@
                                 <!-- <i class="fa fa-search-plus fa-3x"></i> -->
                             <!-- </div> -->
                         <!-- </div> -->
-                        <div class="portfolio-overlay navy">
+                        <div class="portfolio-overlay orange-red">
+                            <img src="img/portfolio/segfault_os.jpeg" alt="" class="portfolio-image">
                             <!-- <img src="img/portfolio/storyphotos.jpeg" alt="" class="portfolio-image"> -->
                         </div>
                         <div class="caption navy">
@@ -497,7 +498,39 @@
                                 <!-- [> XXX change to blank image <] -->
                                 <!-- <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt=""> -->
                             <!-- </a> -->
-                            <p>Description and link coming soon</p>
+                            <!-- <p>Description and link coming soon</p> -->
+                            <p>
+                                This is a basic operating system that a few
+                                friends and I originally built for a class back
+                                in college at UIUC. Before starting the
+                                project, we named it Segfault OS as a joke in
+                                anticipation of the many segfaults that would
+                                be encountered while developing and testing,
+                                but the final creation actually turned out to
+                                be quite stable.
+                            </p>
+                            <p>
+                                Our task with this project was to build a
+                                kernel from scratch that could support the
+                                basic user-level processes shown in the video
+                                above. Segfault OS is written for an i386
+                                processor, and provides concurrent process
+                                execution, virtual memory abstraction, a basic
+                                file system, and drivers for the keyboard,
+                                display, and real-time clock.
+                            </p>
+                            <p>
+                                Even a basic operating system like this
+                                collectively took us hundreds of hours to
+                                build, but it was an incredible learning
+                                experience. The project enabled me to gain a
+                                sense of clarity about how software systems
+                                work. The work on Segfault OS was essential for
+                                my later internship at VMware, and has
+                                generally improved my ability to understand the
+                                bigger picture of how pieces in a software
+                                environment fit together. 
+                            </p>
                             <!-- <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
